<resources>
    <string name="app_name">DemoSimpleClick</string>
    <string name="btnDisplay">Display</string>
    <string name="enter">Enter something</string>
    <string name="show">Display what user enters</string>
    <string name="disabled">Disabled</string>
    <string name="enabled">Enabled</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
</resources>